--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 bcbio-gff==0.7.0
 biopython==1.81
-jupyter==1.0.0
-jupyter_client==7.3.4
-jupyter-console==6.6.2
-jupyter_core==5.2.0
-jupyter-server==1.23.4
-jupyterlab==3.5.3
-jupyterlab-pygments==0.1.2
-jupyterlab_server==2.19.0
-jupyterlab-widgets==1.0.0
+jupyter
+jupyter_client
+jupyter-console
+jupyter_core
+jupyter-server
+jupyterlab
+jupyterlab-pygments
+jupyterlab_server
+jupyterlab-widgets
 typer==0.9.0
 typing_extensions==4.4.0
